DLang.Tests/Tests/errors/array_bounds_check.d
var arr := [1, 2, 3];
arr[0] := 42;
print arr[-1];
print arr[4];